# algotrader_rust

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEVELOPMENT.md  Makefile  PLAN.md  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  config.toml.example  docker-compose.yml  justfile  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: trading_benchmarks.rs
config/: README.md  default.toml
deployment/: algotrader.service
docs/: DEVELOPMENT.md  ROADMAP.md
examples/: binance_e2e.rs
sidecar/: server.py
sidecar_py/: Dockerfile  main.py  requirements.txt
src/: lib.rs  main.rs  risk.rs
src/analysis/: mod.rs  performance_metrics.rs  risk_assessor.rs  wallet_analyzer.rs
src/backtest/: cache.rs  event.rs  harness.rs  importer.rs  mod.rs  providers.rs  remote_provider.rs  tick_provider.rs
src/backtest/cache/: mod.rs
src/blockchain/: mod.rs  solana_client.rs  token_utils.rs  transaction_builder.rs  wallet_scanner.rs
src/cli/: config_wizard.rs  deploy.rs  mod.rs
src/config/: mod.rs  position_sizer.rs  template.rs
src/dashboard/: mod.rs
src/dashboard/static/: index.html
src/data_layer/: mod.rs
src/dex/: jupiter.rs  mod.rs  photon.rs  raydium.rs
src/engine/: market_router.rs  mod.rs
src/indicators/: mod.rs
src/market_data/: mod.rs  ws.rs
src/meta/: mod.rs
src/metrics/: mod.rs
src/onchain/: mod.rs  wallet_tracker.rs
src/performance/: analyzer.rs  metrics.rs  mod.rs  monitor.rs
src/persistence/: mod.rs  sqlite.rs
src/portfolio/: mod.rs
src/risk/: position_sizer.rs
src/sidecar/: mod.rs
src/signal/: alpaca.rs  armor.rs  ccxt.rs  financial.rs  hub.rs  mod.rs  perplexity.rs  photon.rs  solanasniffer.rs  websentiment.rs
src/strategies/: advanced.rs  allocation.rs  bundle_sniper.rs  config_impls.rs  mean_reversion.rs  meme_arbitrage.rs  meta.rs  ml_strategy.rs  mod.rs  momentum.rs  order_flow.rs  param_tuner.rs  performance_aware.rs  registry.rs  trend_following.rs
src/strategy/: fusion.rs  mean_reversion.rs  mod.rs  momentum.rs  risk.rs
src/trading/: mod.rs
src/utils/: atr_cache.rs  binance_stream.rs  coinbase_stream.rs  config.rs  error.rs  fs.rs  helius_stream.rs  indicator_ext.rs  indicators.rs  kraken_stream.rs  logging.rs  market_stream.rs  mod.rs  serum_stream.rs  triton_stream.rs  types.rs  websocket.rs
src/wallet/: mod.rs
tests/: alpaca_source.rs  e2e_trading.rs  phase5_validation.rs  portfolio.rs  sidecar_roundtrip.rs  strategies_compile.rs  websocket_tests.rs
