[package]
autobins = false
autobenches = false
name = "algotraderv2_rust"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A high-performance algorithmic trading system in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/algotraderv2_rust"
readme = "README.md"
keywords = ["trading", "crypto", "defi", "algorithmic-trading"]
categories = ["command-line-utilities", "cryptography", "financial"]

[lib]
name = "algotraderv2"
path = "src/lib.rs"

[[bin]]
name = "algotrader"
path = "src/bin/algotrader.rs"
required-features = ["cli"]


[features]
default = []
cli = ["structopt", "clap_complete", "clap_mangen"]
full = ["cli"]
ml = []
perf = []
strategy_tests = []
legacy_config = []
dashboard = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[dependencies]
csv = "1.3"
plotters = { version = "0.3", default-features = false, features=["bitmap_backend", "image", "line_series"] }
plotters-bitmap = "0.3"


rust_decimal_macros = "1.34"
rust_decimal = { version = "1.34", features = ["serde"] }
# Core dependencies
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "time", "macros"] }
async-trait = "0.1.0"
thiserror = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots"] }
log = "0.4"
env_logger = "0.10"
pretty_env_logger = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.8"
dirs = "5.0"
tempfile = "3.3"
temp-env = "0.2"
hex = "0.4"
hex-literal = "0.4"
bs58 = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
regex = "1.7"
lazy_static = "1.4"
once_cell = "1.18"
num_cpus = "1.15"
rayon = "1.7"
walkdir = "2.3"
ignore = "0.4"
which = "4.4"
console = "0.15"
indicatif = "0.17"
structopt = { version = "0.3", optional = true }
clap_complete = { version = "4.0", optional = true }
clap_mangen = { version = "0.2", optional = true }

# HTTP and Networking
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
url = "2.3"

# Crypto and Web3
solana-client = "1.17.0"
solana-sdk = "1.17.0"
solana-account-decoder = "1.17.0"
solana-transaction-status = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.0", features = ["no-entrypoint"] }
web3 = { version = "0.18", features = ["http"] }
base64 = "0.21"
bincode = "1.3"
serde_with = { version = "3.0", features = ["macros"] }
# Monitoring & Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.14"
sysinfo = "0.30"
# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
sled = "0.34"
zstd = "0.13"
# Database ORM
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }



# Data processing and serialization

crossbeam = "0.8"
arraydeque = "0.5"
ringbuffer = "0.15"
ordered-float = "2.0"

# Technical Analysis
ta = { version = "0.5", features = ["serde"] }
statrs = "0.16"
plotly = { version = "0.8", features = ["image"], optional = true }
statistical = "1.0"

# Async utilities
tokio-util = { version = "0.7", features = ["compat"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging and Output
colored = "2.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.11"
assert_matches = "1.5"
serial_test = "2.0"
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
rstest = "0.17"
